	connection (in a way to have it seg.fault). (PR#14237)

    o	All the results from hist() now use the nominal 'breaks' not
	those adjusted by the numeric 'fuzz": in recent versions the
	nominal 'breaks' were reported but the 'density' referred to
	the intervals used in the calculation -- which mattered very
	slightly for one of the extreme bins.  (Based on a report by
	Martin Becker.)




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.1 patched


NEW FEATURES

    o	The handling of line textures in the postscript() and pdf()
	devices was set up for round end caps (the only type which
	existed at the time): it has now been adjusted for butt endcaps.

    o	lchoose(a,k) is now defined as	log(abs(choose(a,k))), analogously
	to lfactorial().

    o	Although \eqn{} in Rd files is defined as a 'verbatim' macro,
	many packages expected \dots and \ldots to be interpreted
	there (as was the case in R < 2.10.0), so this is now done
	(using an ellipsis in HTML rendering).

    o	Escaping of braces in quoted strings in R-code sections of Rd
	files is allowed again.	 This had been changed for the new Rd
	format in R 2.10.0 but was only documented on the developer
	site and was handled inconsistently by the converters: text
	and example conversion removed the escapes but HTML conversion
	did not.

    o	The PCRE library has been updated to version 8.01, a bug-fix
	release.

    o	tools::readNEWS() now accepts a digit as the first character
    	of a news section.


BUG FIXES

    o	Using read.table(header=TRUE) on a header with an embedded new
	line would copy part of the header into the data.  (PR#14103)

    o	qpois(p = 1, lambda = 0) now gives 0 as for all other p.  (PR#14135)

    o	Functions related to string comparison (e.g. unique(), match())
	could cause crashes when used with strings not in the native