@@ -1,6 +1,6 @@
 % File src/library/graphics/man/persp.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2007 R Core Development Team
+% Copyright 1995-2010 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{persp}
@@ -130,6 +130,10 @@ persp(x, \dots)
 }
 \seealso{
   \code{\link{contour}} and \code{\link{image}}; \code{\link{trans3d}}.
+  
+  Rotatable 3D plots can be produced by package \pkg{rgl}: other ways to
+  produce static perspective plots are available in packages
+  \pkg{lattice} and \pkg{scatterplot3d}.
 }
 \examples{
 require(grDevices) # for trans3d
